# gascoignelib

./: .cvsignore  .gitignore  CHANGES.TXT  CMakeGlobal.txt  CMakeGlobal.txt.in  CMakeLists.txt  CMakeLists_Includes.txt  CMakeLists_Options.txt  CMakeOptions.txt  Doxyfile.in  ERRORS  HISTORY.txt  INSTALL  INSTALL.md  LICENSE.TXT  README.md  RELEASE.md  TODO  Version  changes.txt  gascoignerc_example  install_gascoigne.sh
Examples/Control/: .cvsignore  CMakeLists.txt  backwardequation.cc  backwardequation.h  forward.param  initial.param  localequation.cc  localequation.h  localinitialcondition.cc  localinitialcondition.h  localmeshagent.cc  localmeshagent.h  localterminalcondition.cc  localterminalcondition.h  localtimeloop.cc  localtimeloop.h  main_backward.cc  main_forward.cc  main_initial.cc  main_mesh.cc  main_terminal.cc  mesh.param  problemdescriptorbackward.cc  problemdescriptorbackward.h  problemdescriptorforward.cc  problemdescriptorforward.h  problemdescriptorinitial.cc  problemdescriptorinitial.h  problemdescriptorterminal.cc  problemdescriptorterminal.h  script.py
Examples/ConvectionDiffusion2D/: .cvsignore  CMakeLists.txt  local.cc  local.h  localdirichletdata.cc  localdirichletdata.h  localequation.cc  localequation.h  localloop.cc  localloop.h  localmeshagent.h  localmeshinterpretor.cc  localmeshinterpretor.h  localmultilevelsolver.cc  localmultilevelsolver.h  localsolver.cc  localsolver.h  main.cc  main1.cc  mesh.param  mesh1.param  problemdescriptor1.cc  problemdescriptor1.h  runderkreis.h  solve.00003.bup  solve.00003.gup
Examples/Laplace2D/: CMakeLists.txt  TIMING  boundaryrhsbyexactsolution.h  common.param  local1.h  local2.h  main1.cc  main2.cc  mesh1.param  mesh2.param  neumanndatabyexactsolution.cc  neumanndatabyexactsolution.h  polynomialexactsolution.cc  polynomialexactsolution.h  problemdescriptor1.cc  problemdescriptor1.h  problemdescriptor2.cc  problemdescriptor2.h  q2.param  slit.param
Examples/NavierStokes3D/: .cvsignore  CMakeLists.txt  benchcircle.param  benchmark3ddirichletdata.cc  benchmark3ddirichletdata.h  local.h  main.cc  main1.cc  problemdescriptor1.cc  problemdescriptor1.h
Examples/NoName/: .cvsignore  CMakeLists.txt  bench.param  bigstokes.inp  localdirichletdata.cc  localdirichletdata.h  localequation.cc  localequation.h  localintegrator.cc  localintegrator.h  localloop.cc  localloop.h  localmesh2d.cc  localmesh2d.h  localmeshagent.h  localmeshconstructor.cc  localmeshconstructor.h  localmeshinterpretor.cc  localmeshinterpretor.h  localmultigridmesh.h  localmultilevelsolver.cc  localmultilevelsolver.h  localsolver.cc  localsolver.h  main.cc  problemdescriptor.cc  problemdescriptor.h
Examples/RANS/: .clang_complete  CMakeLists.txt  a.out  coefs.csv  coefs_lin.csv  features.h  gascoigne.param  grid_gen.py  lin_coefs.csv  main.cc  mainNS.cc  mainRTM.cc  main_const.cc  main_lin.cc  means.csv  multiplex.h  polynomial_features.h  polynomial_features3.h  problem.h  rans.param  rans_base.h  rans_const.h  rans_equation.copy  rans_lin.h  rans_loop.h  rans_lsq.h  rans_twomodels.h  rectangle.inp  test.cc  test3.cc  tut.inp  two_model_means.csv  var_mean_scales.csv  wall_mounted.inp  wall_mounted1.inp  wall_mounted3.inp  wall_mounted4.inp
Examples/Solid3D/: CMakeLists.txt  Verzweigung_FSI_neu_solid.inp  boundarysolid.cc  boundarysolid.h  finehierarchicalmesh3d.cc  finehierarchicalmesh3d.h  local.h  localhierarchicalmesh3d.cc  localhierarchicalmesh3d.h  localmeshagent.cc  localmeshagent.h  loop.cc  loop.h  main3d.cc  multiplex.xx  multiplexbound.xx  prestress_boundary_fine_onelayer.inp  prestress_coarse_onelayer.inp  solid.cc  solid.h  solid_STVK_p1.param  solid_STVK_p1_jac.param  solvers.cc  solvers.h  vanka_matrix_vector.cc  vanka_matrix_vector.h  vein_STVK_p1.param  vein_p1_jac.param  vein_p2_jac.param
Examples/Vanka/: CMakeLists.txt  fsi.cc  fsi.h  local.h  loop.cc  loop.h  main.cc  main3d.cc  solvers.cc  solvers.h  sq.inp  v2.param  v3.param
Examples/Vein/: CMakeLists.txt  local.h  loop.cc  loop.h  main.cc  main3d.cc
Examples/fast3d_neu/: #tut#  CMakeLists.txt  Verzweigung_FSI_neu.inp  alebase.cc  alebase.h  alebasediscretization.h  alediscretization.h  boundaryfsi.cc  boundaryfsi.h  box3d.inp  box3d.param  chi.cc  chi.h  circles.txt  finehierarchicalmesh3d.cc  finehierarchicalmesh3d.h  fsi-3.param  fsi.cc  fsi.h  functional.txt  local.h  localhierarchicalmesh3d.cc  localhierarchicalmesh3d.h  localmeshagent.cc  localmeshagent.h  loop.cc  loop.h  main.cc  main3d.cc  multiplex.xx  out.txt  pre.00000.vtk  solvers.cc  solvers.h  vein.param
Examples/fsidwr/: CMakeLists.txt  ale-dual.cc  ale-dual.h  ale.cc  ale.h  ale_slow.cc  ale_slow.h  aleadjoint.cc  alebase.cc  alebase.h  alebasediscretization.h  aleblocks.cc  aleblocks.h  aleboundary.cc  aleboundary.h  aleinterpolator.cc  aleinterpolator.h  aleloop.cc  aleloop.h  alemultilevelsolver.cc  alemultilevelsolver.h  alesolver.cc  alesolver.h  art.inp  art.param  b2d.param  bench-3d-split.param  bench-3d.param  bench-split.param  bench.param  bench3d.inp  ch.inp  ch.param  chi.cc  chi.h  drag-3d.txt  drag.txt  dual-primal-equation.h  dwr.cc  dwr.h  (+28 more)
Examples/oscill/: CMakeLists.txt  alebase.cc  alebasediscretization.h  alediscretization.cc  benchF001C1.sh  benchF01C1.sh  benchPara.cc  benchtime.sh  benchtime_coarse.sh  blockvanka.h  chi.cc  colors.h  div.cc  div.h  error_paraC010000I2.txt  fsi-3.param  fsi-std.cc  fsi-wm.param  fsi.cc  (+27 more)
cuda/: CMakeLists.txt  check_cuda.h  cudabsrmatrixinterface.cc  cudabsrmatrixinterface.h  cudacsrmatrixinterface.cc  cudacsrmatrixinterface.h  cudaloop.cc  cudaloop.h  cudamgintepolatornested.cc  cudamgintepolatornested.h  cudamultilevelsolver.cc  cudamultilevelsolver.h  cudasolver.cc  cudasolver.h  cudavectorinterface.cc  cudavectorinterface.h  cusparsehelper.cu  cusparsehelper.h  scaledimatrixblock.h  stdmultilevelsolver.cc
doc/: .cvsignore  CMakeLists.txt  Doxyfile  Doxyfile.generic  Doxyfile.in  doxygen.css  gascoignedoc.tex  libstdc++.tag  taginformation.cmake.in
src/: CMakeLists.txt
test/: CMakeLists.txt  main1.cc  main2.cc  square.inp  test.cc
(+1727 files in other folders)
