INCLUDE_DIRECTORIES(${GASCOIGNE_INCLUDE_DIRS})

FILE(GLOB GASCOIGNE_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/*/*.cc)

ADD_LIBRARY(${GASCOIGNE_LIBRARY} ${GASCOIGNE_SOURCE})
TARGET_LINK_LIBRARIES(${GASCOIGNE_LIBRARY} ${GASCOIGNE_LIBRARIES})
SET_TARGET_PROPERTIES(${GASCOIGNE_LIBRARY}
  PROPERTIES
  LINK_FLAGS "${GASCOIGNE_LINKER_FLAGS}"
  COMPILE_DEFINITIONS "${GASCOIGNE_DEFINITIONS}"
  COMPILE_FLAGS "${GASCOIGNE_CXX_FLAGS}"
  )
