FILE(GLOB_RECURSE GASCOIGNE_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/*/*.cc)

ADD_LIBRARY(${GASCOIGNE_LIBRARY} ${GASCOIGNE_SOURCE})
TARGET_LINK_LIBRARIES(${GASCOIGNE_LIBRARY} ${GASCOIGNE_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(${GASCOIGNE_LIBRARY} PUBLIC
	${GASCOIGNE_INCLUDE_DIRS}
)
target_compile_options(${GASCOIGNE_LIBRARY} PRIVATE ${GASCOIGNE_CXX_FLAGS} "-Wno-sign-compare")
# SET_TARGET_PROPERTIES(${GASCOIGNE_LIBRARY}
#  PROPERTIES
#  LINK_FLAGS "${GASCOIGNE_LINKER_FLAGS}"
#  COMPILE_DEFINITIONS "${GASCOIGNE_DEFINITIONS}"
#  COMPILE_FLAGS "${GASCOIGNE_CXX_FLAGS}"
#  )

OPTION(USE_IWYU "Use include what you use for include optimization" ON)
IF(USE_IWYU)
    find_program(IWYU include-what-you-use HINTS /usr/bin/)
    if(NOT IWYU)
        message("IWYU not found!")
    endif()

    set_property(TARGET ${GASCOIGNE_LIBRARY} 
        PROPERTY CXX_INCLUDE_WHAT_YOU_USE ${IWYU}  "-Xiwyu")
endif()
