FILE(GLOB_RECURSE GASCOIGNE_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/*/*.cc)

ADD_LIBRARY(${GASCOIGNE_LIBRARY} ${GASCOIGNE_SOURCE})
TARGET_LINK_LIBRARIES(${GASCOIGNE_LIBRARY} ${GASCOIGNE_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(${GASCOIGNE_LIBRARY} PUBLIC
	${GASCOIGNE_INCLUDE_DIRS}
)
TARGET_COMPILE_OPTIONS(${GASCOIGNE_LIBRARY} PUBLIC ${GASCOIGNE_CXX_FLAGS})

OPTION(USE_IWYU "Use include what you use for include optimization" ON)
IF(USE_IWYU)
    find_program(IWYU include-what-you-use HINTS /usr/bin/)
    if(NOT IWYU)
        message("IWYU not found!")
    endif()

    set_property(TARGET ${GASCOIGNE_LIBRARY} 
        PROPERTY CXX_INCLUDE_WHAT_YOU_USE ${IWYU}  "-Xiwyu")
endif()
