ADD_EXECUTABLE("rans_wm"
main.cc
)
SET_TARGET_PROPERTIES(
    rans_wm
    PROPERTIES
    COMPILE_DEFINITIONS "${GASCOIGNE_DEFINITIONS}"
    )

ADD_EXECUTABLE("rans_wm_rtm"
mainRTM.cc
)
SET_TARGET_PROPERTIES(
    rans_wm_rtm
    PROPERTIES
    COMPILE_DEFINITIONS "${GASCOIGNE_DEFINITIONS}"
    )

ADD_EXECUTABLE("ns_wm"
NSmain.cc
)
SET_TARGET_PROPERTIES(
    ns_wm
    PROPERTIES
    COMPILE_DEFINITIONS "${GASCOIGNE_DEFINITIONS}"
    )
