ADD_EXECUTABLE("rans_wm"
main.cc
)
SET_TARGET_PROPERTIES(
    rans_wm
    PROPERTIES
    COMPILE_DEFINITIONS "${GASCOIGNE_DEFINITIONS}"
    )

ADD_EXECUTABLE("rans_wm_rtm"
mainRTM.cc
)
SET_TARGET_PROPERTIES(
    rans_wm_rtm
    PROPERTIES
    COMPILE_DEFINITIONS "${GASCOIGNE_DEFINITIONS}"
    )

ADD_EXECUTABLE("ns_wm"
mainNS.cc
)
SET_TARGET_PROPERTIES(
    ns_wm
    PROPERTIES
    COMPILE_DEFINITIONS "${GASCOIGNE_DEFINITIONS}"
    )

ADD_EXECUTABLE("rans_const"
main_const.cc
)
SET_TARGET_PROPERTIES(
    rans_const
    PROPERTIES
    COMPILE_DEFINITIONS "${GASCOIGNE_DEFINITIONS}"
    )

ADD_EXECUTABLE("rans_lin"
main_lin.cc
)
SET_TARGET_PROPERTIES(
    rans_lin
    PROPERTIES
    COMPILE_DEFINITIONS "${GASCOIGNE_DEFINITIONS}"
    )
