ADD_EXECUTABLE("vanka2d"  main.cc fsi.cc solvers.cc loop.cc)
ADD_EXECUTABLE("vanka3d" main3d.cc fsi.cc solvers.cc loop.cc)

SET_TARGET_PROPERTIES(
  vanka2d
  PROPERTIES
  COMPILE_DEFINITIONS "${GASCOIGNE_DEFINITIONS}"
  )
SET_TARGET_PROPERTIES(
  vanka3d
  PROPERTIES
  COMPILE_DEFINITIONS "${GASCOIGNE_DEFINITIONS}"
  )
