ADD_EXECUTABLE("vein_2d" 
 Solver/alebase.cc    
 Solver/alediscretization.cc  
 Solver/solvers.cc 
 FSI/fsi.cc    
 FSI/boundaryfsi.cc 
 FSI/fsi_dirichlet.cc 
 loop.cc
 main.cc  
 Mesh/finehierarchicalmesh3d.cc 
 Mesh/localmeshagent.cc
 Mesh/localhierarchicalmesh3d.cc
 Mesh/projectiononfinemeshagent.cc
 Fluid_Stat/fluid_stat.cc
 Fluid_Stat/boundary_fluid_stat.cc
 Fluid_Stat/fluid_stat_dirichlet.cc
 Solid_Euler/solideuler.cc
 Solid_Euler/boundarysolideuler.cc
 Solid_Euler/solid_euler_dirichlet.cc
)
ADD_EXECUTABLE("vein_3d" 
 Solver/alebase.cc    
 Solver/alediscretization.cc   
 Solver/solvers.cc 
 FSI/boundaryfsi.cc 
 FSI/fsi.cc   
 FSI/fsi_dirichlet.cc  
 loop.cc
 main3d.cc  
 Mesh/finehierarchicalmesh3d.cc
 Mesh/localmeshagent.cc 
 Mesh/localhierarchicalmesh3d.cc
 Mesh/projectiononfinemeshagent.cc
 Fluid_Stat/fluid_stat.cc
 Fluid_Stat/boundary_fluid_stat.cc
 Fluid_Stat/fluid_stat_dirichlet.cc
 Solid_Euler/solideuler.cc
 Solid_Euler/boundarysolideuler.cc
 Solid_Euler/solid_euler_dirichlet.cc
)

SET_TARGET_PROPERTIES(
  vein_3d
  PROPERTIES
  COMPILE_DEFINITIONS "${GASCOIGNE_DEFINITIONS}"
  )
SET_TARGET_PROPERTIES(
  vein_2d
  PROPERTIES
  COMPILE_DEFINITIONS "${GASCOIGNE_DEFINITIONS}"
  )
