SET(MESH_SRC 
  adaptordata.cc
  boundaryfunction.cc
  boundaryindexhandler.cc
  coarsehierarchicalmesh2d.cc
  coarsehierarchicalmesh3d.cc
  deletecells.cc
  delete_hex.cc
  diplomantenadaptor.cc
  edgearray.cc
  edge.cc
  edgemanager.cc
  facemanager.cc
  flacherkreis.cc
  gascoignemesh2d.cc
  gascoignemesh3d.cc
  gascoignemesh.cc
  gascoignemeshconstructor.cc
  gascoignemeshtransfer2d.cc
  gascoignemeshtransfer3d.cc
  gascoignemeshtransfer.cc
  gascoignemeshtransferconstructor.cc
  gascoignemultigridmesh.cc
  hang.cc
  hangcontainer2d.cc
  hangcontainer3d.cc
  hangingindexhandler.cc
  hanglist.cc
  hanglistio.cc
  hexlawandorder.cc
  hierarchicalmesh2d.cc
  hierarchicalmesh3d.cc
  hierarchicalmesh.cc
  index.cc
  levelmesh2d.cc
  levelmesh3d.cc
  malteadaptor.cc
  meshagent.cc
  ncadaptor.cc
  optadaptor.cc
  patchindexhandler.cc
  quadlawandorder.cc
  refiner.cc
  regular_update.cc
)

ADD_LIBRARY(Mesh MESH_SRC)
