INCLUDE_DIRECTORIES(
${STD_SRC}/Common
${STD_SRC}/Mesh
${STD_SRC}/Solver
${STD_SRC}/LinAlg
)

SET(MESHINTERPRETOR_SRC 
basicintegrator.cc
galerkinintegrator.cc
basicmeshinterpretor.cc
cellmeshinterpretor.cc
patchmeshinterpretor.cc
q1.cc
q12d.cc
q13d.cc
q1gls2d.cc
q1gls3d.cc
galerkinglsintegrator.cc
glsintegrator.cc
avs.cc
cellvisu.cc
gmv.cc
gnuplot.cc
visu_eps.cc
visualization.cc
visudatacompvector.cc
visudatacompvectorfunction.cc
visudatainfo.cc
visudatarhs.cc
vtk.cc
vu.cc
baseq12d.cc
baseq12dwith.cc
baseq13d.cc
baseq13dwith.cc
finiteelement2d.cc
finiteelement3d.cc
hnstructureq12d.cc
hnstructureq13d.cc
integrationformula.cc
integrationformula1d.cc
integrationformula2d.cc
integrationformula3d.cc
transformation2d.cc
)

ADD_LIBRARY(MeshInterpretor ${MESHINTERPRETOR_SRC})
