SET(MESHINTERPRETOR_SRC 
  avs.cc
  baseq12d.cc
  baseq12dwith.cc
  baseq13d.cc
  baseq13dwith.cc
  basicintegrator.cc
  basicmeshinterpretor.cc
  cellmeshinterpretor.cc
  cellvisu.cc
  finiteelement2d.cc
  finiteelement3d.cc
  galerkinglsintegrator.cc
  galerkinintegrator.cc
  glsintegrator.cc
  gmv.cc
  gnuplot.cc
  hnstructureq12d.cc
  hnstructureq13d.cc
  integrationformula1d.cc
  integrationformula2d.cc
  integrationformula3d.cc
  integrationformula.cc
  mginterpolatormatrix.cc
  mginterpolatornested.cc
  patchmeshinterpretor.cc
  q12d.cc
  q13d.cc
  q1.cc
  q1gls2d.cc
  q1gls3d.cc
  transformation2d.cc
  visualization.cc
  visudatacompvector.cc
  visudatacompvectorfunction.cc
  visudatainfo.cc
  visudatarhs.cc
  visu_eps.cc
  vtk.cc
  vu.cc
)

ADD_LIBRARY(MeshInterpretor MESHINTERPRETOR_SRC)
