SET(ELASTICITY_SOURCE 
	${CMAKE_CURRENT_SOURCE_DIR}/elasticityproblem.h
	${CMAKE_CURRENT_SOURCE_DIR}/local.h
)

set(ADAPTIVE_ELASTICITY_3D AdaptiveElasticity3dEdge)

ADD_EXECUTABLE(${ADAPTIVE_ELASTICITY_3D} ${ELASTICITY_SOURCE} ${CMAKE_CURRENT_SOURCE_DIR}/main.cc)

target_compile_definitions(${ADAPTIVE_ELASTICITY_3D} PUBLIC
	${GASCOIGNE_DEFINITIONS}
)

target_include_directories(${ADAPTIVE_ELASTICITY_3D} PUBLIC
	${GASCOIGNE_INCLUDE_DIRS}
	${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(${ADAPTIVE_ELASTICITY_3D} 
	GascoigneStd
)

set(ALL_CXX_SOURCE_FILES ${ALL_CXX_SOURCE_FILES} ${ELASTICITY_SOURCE} PARENT_SCOPE)

